Fix sharp clipping of scrolling pills by padding and fixing CSS mask

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-
 .mask-edges {
-  mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
-  -webkit-mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
+  mask-image: linear-gradient(to right, transparent, black 40px, black calc(100% - 40px), transparent);
+  -webkit-mask-image: linear-gradient(to right, transparent, black 40px, black calc(100% - 40px), transparent);
 }
